--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>webpack starterkit</title>
+  <title>Web TWAIN + Tesseract OCR Demo</title>
   <meta name="description" content="A light foundation for your next frontend project based on webpack.">
+  <style>
+    #dwtcontrolcontainer {
+      width: 320px;
+      height: 400px;
+    }
+  </style>
 </head>
 <body>
-  <img src="images/webpack.png" alt="Webpack logo">
-  <h1>webpack starter</h1>
-  <p>✨ A lightweight foundation for your next webpack based frontend project.</p>
+  <h2>Web TWAIN + Tesseract OCR Demo</h2>
+  <div id="dwtcontrolcontainer"></div>
 </body>
 </html>
