--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,8 @@
   <h2>Web TWAIN + Tesseract OCR Demo</h2>
   <div class="app">
     <div class="document-scanner">
-      <button>Scan</button>
-      <button>Load Files</button>
+      <button class="scan-btn">Scan</button>
+      <button class="load-btn">Load Files</button>
       <div id="dwtcontrolcontainer"></div>
     </div>
     <div class="ocr">
