add edit button

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
   <div class="app">
     <div class="document-scanner">
       <button class="scan-btn">Scan</button>
+      <button class="edit-btn">Edit</button>
       <button class="load-btn">Load Files</button>
       <div id="dwtcontrolcontainer"></div>
     </div>
