--- a/src/index.html
+++ b/src/index.html
@@ -17,19 +17,25 @@
     .ocr {
       margin-left: 2em;
     }
+
+    #status {
+      margin-left: 1em;
+    }
   </style>
 </head>
 <body>
   <h2>Web TWAIN + Tesseract OCR Demo</h2>
   <div class="app">
     <div class="document-scanner">
+      <div>Document Scanner:</div>
       <button class="scan-btn">Scan</button>
       <button class="edit-btn">Edit</button>
       <button class="load-btn">Load Files</button>
       <div id="dwtcontrolcontainer"></div>
     </div>
     <div class="ocr">
-      Tesseract 
+      <span>Tesseract:</span>
+      <span id="status"></span>
     </div>
   </div>
 </body>
