--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,13 @@
     <div class="ocr">
       <span>Tesseract:</span>
       <span id="status"></span>
+      <div>
+        <button class="ocr-btn">OCR Selected</button>
+        <button class="batch-ocr-btn">OCR All</button>
+        <label for="skip-processed-chk">Skip processed
+          <input id="skip-processed-chk" type="checkbox"/>
+        </label>
+      </div>
     </div>
   </div>
 </body>
