--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,9 @@
           <input id="skip-processed-chk" type="checkbox"/>
         </label>
       </div>
+      <div class="text">
+
+      </div>
     </div>
   </div>
 </body>
