add a download button

--- a/src/index.html
+++ b/src/index.html
@@ -42,10 +42,9 @@
         <label for="skip-processed-chk">Skip processed
           <input id="skip-processed-chk" type="checkbox"/>
         </label>
+        <button class="download-text-btn">Download Text</button>
       </div>
-      <div class="text">
-
-      </div>
+      <div class="text"></div>
     </div>
   </div>
 </body>
